--- a/ch07-rsscache/pom.xml
+++ b/ch07-rsscache/pom.xml
@@ -70,7 +70,7 @@
   <repositories>
     <repository>
       <id>java.net</id>
-      <url>http://download.java.net/maven/2</url>
+      <url>https://download.java.net/maven/2</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
